public/assets/css/spongehome.css
/* ... */
  section.offsite-links {
    background-color: #f2f2f2; }
    section.offsite-links .container {
      position: relative;
      z-index: 2; }
  section.irc {
    background-attachment: fixed;
    background-image: url(../img/backgrounds/irc.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    color: #2b2b2b; }
    section.irc .intro-text {
      justify-content: center;
      align-items: center;
      padding: 2em 0; }
    @media (min-width: 1200px) {
      section.irc .intro-text {
        display: flex; } }
    section.irc span {
      color: #2b2b2b;
      font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
      font-size: 3em;
      font-weight: 700;
      text-transform: uppercase; }
  section.sponsors-content {
    background-attachment: fixed;
    background-image: url(../img/backgrounds/sponsors-content.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    color: #2b2b2b; }
  section.sponsors-about {
    background-attachment: fixed;
    background-image: url(../img/backgrounds/sponsors-about.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    color: #fff; }
  section.sponsors-why {
    background-attachment: fixed;
    background-image: url(../img/backgrounds/sponsors-why.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    color: #2b2b2b; }
  section.social {
    background-attachment: fixed;
    background-color: #f2f2f2;
    color: #2b2b2b;
    padding: 20px 0; }
  section.success a {
    color: #333333;
    outline: 0; }
    section.success a:hover, section.success a:focus, section.success a:active, section.success a.active {
      color: #333333;
      outline: 0; }
  @media (max-width: 767px) {
    section {
      padding: 75px 0; }
      section.first {
        padding-top: 75px; } }

footer {
  color: #fff; }
  footer h3 {
    margin-bottom: 30px; }
  footer .footer-above {
    background-color: #333333;
    padding-top: 50px; }
  footer .footer-col {
    margin-bottom: 50px; }
    footer .footer-col p {
      font-weight: 100; }
  footer .footer-below {
    background-color: #262626;
    padding: 15px 0; }
    footer .footer-below .row div {
      font-size: 0.8em; }
      footer .footer-below .row div p {
        font-size: 1em; }

#header-display {
  padding-top: 4em;
  padding-bottom: 0; }
  #header-display .container {
    display: flex;
    flex-wrap: wrap;
    -webkit-display: flex;
    -webkit-flex-wrap: wrap;
    padding: 0; }
  #header-display #main-display {
    display: flex;
    -webkit-display: flex;
    align-items: center; }
  #header-display #sponsors-display {
    padding: 1.5em 0; }
    #header-display #sponsors-display img {
      width: 95%;
      transition: all 0.2s ease-in-out;
      -webkit-transition: all 0.2s ease-in-out;
      -moz-transition: all 0.2s ease-in-out;
      -o-transition: all 0.2s ease-in-out; }
      #header-display #sponsors-display img:hover {
        transform: scale(1.1); }

#announcements p {
  text-align: justify;
  padding: 0 10px;
  font-size: 18px; }

#announcements h1 {
  padding: 0 10px; }

#announcements h2 {
  padding: 0 10px; }

#announcements h3 {
  margin-bottom: 20px;
  padding: 0 10px; }

#announcements a {
  padding: 0 10px; }

#announcements .col-lg-12 h2 {
  border-color: white; }

.announcement h1 {
  font-size: 1.4em; }

.announcement h2 {
  font-size: 1.3em; }

.announcement h3 {
  font-size: 1.2em; }

.announcement .emoji {
  height: 1.1em; }

#about {
  color: white; }
  #about p {
    padding: 0 10px;
    text-align: justify; }
  #about h2 {
    border-color: white; }

#about .col-lg-12, #announcements .col-lg-12 {
  margin-bottom: 50px; }

#social .col-lg-12 {
  margin: 0px;
  text-align: center; }

#socialIcons {
  display: flex;
  -webkit-display: flex; }
  #socialIcons i {
    transition: color .2s ease-in-out;
    -webkit-transition: color .2s ease-in-out;
    -moz-transition: color .2s ease-in-out;
    -o-transition: color .2s ease-in-out; }
  #socialIcons a {
    transition: background .2s ease-in-out;
    -webkit-transition: background .2s ease-in-out;
    -moz-transition: background .2s ease-in-out;
    -o-transition: background .2s ease-in-out;
    width: 10%;
    border-radius: 8px;
    margin: 8%;
    padding: 20px 2%;
    color: rgba(0, 0, 0, 0.2);
    color: #333333; }
    #socialIcons a:hover {
      background-color: rgba(0, 0, 0, 0.2); }
    #socialIcons a:hover i {
      color: #f7cf0d; }

@media (max-width: 1180px) {
  #about img {
    margin: 50px auto; } }

#offsite-links {
  display: flex;
  padding: 20px 0;
  -webkit-display: flex;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap; }
  #offsite-links .col-xs-2 {
    padding: 0 40px; }
  #offsite-links div.row {
    margin: 0 auto;
    max-width: 1100px; }
  #offsite-links i {
    font-size: 3em;
    color: #111111; }
  #offsite-links a {
    width: 20%;
    color: #111111;
    text-decoration: none;
    opacity: .6;
    transition: opacity .2s ease-in-out;
    -webkit-transition: opacity .2s ease-in-out;
    -moz-transition: opacity .2s ease-in-out;
    -o-transition: opacity .2s ease-in-out; }
    #offsite-links a img {
      width: 50%; }
      @media (max-width: 1000px) {
        #offsite-links a img {
          width: 70%; } }
    #offsite-links a:hover {
      opacity: 1; }

#sponsors-page {
  margin: 60px 60px 0;
  background-color: #fff; }
  #sponsors-page .container {
    display: flex;
    flex-wrap: wrap;
    -webkit-display: flex;
    -webkit-flex-wrap: wrap;
    padding: 0; }
  #sponsors-page #sponsors-left section {
    padding: 10px 0;
    margin-bottom: 10px;
    border-bottom: 0; }
  #sponsors-page #sponsors-left .sponsors-block {
    text-align: justify; }
    #sponsors-page #sponsors-left .sponsors-block h1 {
      font-size: 28px;
      margin-bottom: 20px; }
    #sponsors-page #sponsors-left .sponsors-block h4 {
      font-weight: 100;
      font-size: 18px; }
/* ... */

